<resources>
    <string name="app_name">Dicoding Story</string>

    <string name="text_welcome_title">Welcome to Dicoding Story!</string>
    <string name="text_welcome_desc">Share the excitement of learning at Dicoding with your friends!</string>

    <string name="login">Login</string>
    <string name="text_login_title">Ready to share your story?</string>
    <string name="text_login_message">Let\'s login first!</string>
    <string name="text_login_success">Login successful</string>

    <string name="register">Register</string>
    <string name="text_register_title">Please fill in the information below completely</string>
    <string name="name">Name</string>
    <string name="text_hint_name">Enter your full name</string>
    <string name="email">Email</string>
    <string name="text_hint_email">Enter email</string>
    <string name="text_invalid_email">Invalid email</string>
    <string name="text_empty_email">Email cannot be empty</string>
    <string name="password">Password</string>
    <string name="text_hint_password">Enter password</string>
    <string name="text_invalid_password">Passwords must be at least 8 characters long</string>
    <string name="text_register_success">Registration successful</string>

    <string name="logout">Logout</string>
    <string name="text_logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="text_add_new_story">Create a new story</string>
    <string name="text_no_story">No story today. Let\'s share a story about your fun today.</string>

    <string name="token_not_found">Token not found</string>
    <string name="login_failed">Login failed</string>

    <string name="text_account_name">User account name</string>
    <string name="text_post_time">Post time</string>
    <string name="text_content_description">Content description</string>

    <string name="uploaded">Uploaded</string>
    <string name="just_now">Just now</string>
    <string name="just_uploaded">Just uploaded</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="months_ago">months ago</string>
    <string name="years_ago">years ago</string>

    <string name="add_description">Add a description…</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="text_upload_success">Story uploaded successfully</string>
    <string name="text_warning_image_empty">Image must not be empty</string>

    <string name="settings">Settings</string>
    <string name="app_language">Application Language</string>
    <string name="select_language">Select language (%s)</string>
    <string name="key_language">language</string>
    <string name="appwidget_text">STORY LIST</string>
    <string name="text_empty_widget">No story today</string>
    <string name="retry">Retry</string>

    <string name="content_desc_iv_detail_photo">Image on the story details page</string>
    <string name="content_desc_iv_full_photo">Image on the details page in full screen mode</string>
    <string name="content_desc_ib_close_full_photo">Close full screen mode</string>
    <string name="content_desc_iv_login">Vector image on the login page</string>
    <string name="content_desc_iv_no_data">Vector image when there is no story</string>
    <string name="content_desc_iv_register">Vector image on the register page</string>
    <string name="content_desc_iv_account_photo">Profile picture on the settings page</string>
    <string name="content_desc_iv_preview">Preview the image to be uploaded</string>
    <string name="content_desc_iv_welcome">Vector image on the welcome page</string>
    <string name="content_desc_iv_item_photo">Item story image</string>
    <string name="content_desc_iv_item_widget_photo">Image of widget story item</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="include_current_location">Include current location</string>
</resources>